# mbot_visual_servoing_imagebased_action

./: CMakeLists.txt  README.md  package.xml
ros/action/: GraspObject.action
ros/action/msg/: GraspObjectAction.msg  GraspObjectActionFeedback.msg  GraspObjectActionGoal.msg  GraspObjectActionResult.msg  GraspObjectFeedback.msg  GraspObjectGoal.msg  GraspObjectResult.msg
ros/config/: params.yaml
ros/include/VS_IBVS_node/: action_server_vs.h  vs_ibvs_node_morepts.h
ros/launch/: visual_servoing_imagebased_cartesian_controller.launch  visual_servoing_imagebased_emilia_controller.launch
ros/scripts/: example_vs_ibvs_node_with_3pts.cpp
ros/src/: action_client_vs.cpp  action_server_vs.cpp
